# Rust_JNI_Demo

./: Cargo.toml  Xargo.toml
src/: android_log_lite.rs  lib.rs
