[package]
name = "rust_jni_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.20.0"
android_logger_lite = "0.1.0"
openssl = {version="0.10.43", features = ["vendored"]}
zip = "0.6.3"


[profile.release]
lto = true
opt-level = 'z'
strip = true
codegen-units = 1
panic = 'abort'

[lib]
#C规范动态库
crate_type = ["cdylib"]